\#76 Add prototype for station observation data endpoint
- Update API spec
- Add implementation for endpoint
- Add launch.json and .env.example for environment settings.
